finally fix bug